0.0.0

* Fix: Draw interaction for 2-point graphics (#3).
* Delete - Layers/features/links from list.
* Delete - Features from map.
* Delete - Shortcuts. DELETE key and CMD/CTRL-BACKSPACE.
* Fix: Resolved issue with duplicate entries in symbol palette.
* Fix: Symbol "Breach" (area Tasks) is wrong displayed on the map (#5)
* Transfer active/default layer from legacy projects.
* Links (ex. references) - Drag'n drop for layers and features.
* Fix: Tagging - Only support alphanumeric characters and '/' in tag names (#1).
* Draw interaction - Drawing is initialized by double clicking symbol in palette.
* Draw interaction - Shortscuts. Escape key cancels ongoing drawing.
* Draw interaction - Features SEIZE and TURN are currently unsupported
* Default Layer - Tag 'default' defines new default layer.
* Default Layer - Layer is created implicitly when needed and none is defined.
* Sidebar - Fixed issue with partially empty list.
* Sidebar - Store/restore visibility and current scope (group).
* Sidebar - Shortcuts. CMD/CTRL-B: toggle, CMD/CTRL-1: layers, CMD/CTRL-2: symbols.
* Symbols - Removed echelon from all previews but UNIT and SO.
* Performance - Externalized symbol image/url cache to file (FRIENDLY/PRESENT only).